Fix small visual bugs (horizontal scroll)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,10 +51,9 @@ body {
 	background: var(--app-dark-background);
 	background-attachment: fixed;
 
-	width: 100vw;
+	padding: 0 20px;
 	min-height: 100vh;
 	margin: 0;
-	padding: 0;
 	position: relative;
 }
 
